# rust-sample

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  SeaOrm.toml
src/: db.rs  lib.rs  openapi.rs  redis.rs  router.rs  server.rs  tracing.rs  vendor.rs  vendor_helper.rs
src/extension/: extension.controller.rs  extension.entity.rs  extension.repository.rs  extension.service.rs  mod.rs
src/extension/dto/: extension.dto.rs  mod.rs
src/middleware/: logging.rs
src/webhooks/: mod.rs
src/webhooks/telegram/: telegram.service.rs
src/webhooks/telegram/balance/: balance.repository.rs  balance.service.rs  package.repository.rs
src/webhooks/telegram/balance/tests/: balance.test.rs  balance_percent.test.rs
src/webhooks/telegram/location/: location.repository.rs  location.service.rs
src/webhooks/telegram/location/test/: location.test.rs  roaming_not_allowed.test.rs
