[package]
name = "service_adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
axum = { version = "0.7.4", features = ["json", "query", "multipart"] }
axum-macros = "0.4.1"
dotenv = "0.15.0"
sea-orm = { version = "0.12", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
  "debug-print",
] }
redis = "0.25.3"
once_cell = "1.19.0"

serde = { version = "1.0.177", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
#--- 
entity = { path = "../entity" }
migration_service_adapter = { path = "../migration" }
#--- Business Logic Mount ----
sim_auth = { path = "../sim_auth" }
#service_webhooks = { path = "../service_webhooks" }
#--- **** ----
chrono = "0.4.34"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tower-http = { version = "0.4.4", features = ["trace"] }
trace = "0.1.7"
reqwest = { version = "0.11.22", features = ["json"] }
regex = "1.10.2"

async-executor = "1.8.0"
async-trait = "0.1.79"
rust_decimal = "1.32.0"
rand = "0.8"

serde_plain = "1.0.2"
serde_with = "3.3.0"
mockall = "0.12.1"

service_interface = { git = "ssh://git@gitlab***************-interface.git", tag = "v.0.68" }

utoipa = { version = "4.2.0", features = [
  "axum_extras",
  "decimal",
  "chrono",
  "time",
] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
csv = "1.3.0"

[profile.release]
strip = true
